--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
     <form id="form-gif-request" />
         <label>What kind of Jackson 5 related gif do you want?</label>
-        <input name="tag" type="text"/>
+        <input id="tag" name="tag" type="text"/>
         <input type="submit" value="Get my Gif!" />
     </form>
 
-    <img id="gif" src="" hidden="true"/>
-    <p id="feedback" hidden="true`"></p>
+    <img id="gif" src="" />
+    <p id="feedback" ></p>
 
 </body>
 </html>
