Added validation and fixed loading message

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
         <label>What kind of Jackson 5 related gif do you want?</label>
         <input id="tag" name="tag" type="text"/>
         <input type="submit" value="Get my Gif!" />
+        <br>
+        <br>
+        <div id="validateForm" >
+        <label>Prove you are not a robot by answering this riddle:</label>
+        <br>
+        <input id="validation" name="validation" type="text" value="(How Many?)"><label> Jacksons are better than 1 </label>
+      </div>
     </form>
 
     <img id="gif" src="" hidden="true"/>
